# devkit

./: .gitignore  CMakeLists.txt  pigadevkit.service
cmake/: PigaDevkitConfig.cmake.in
include/piga/devkit/: Client.hpp  Config.hpp.in  InstallRequest.hpp  Request.hpp  Server.hpp
src/: Client.cpp  InstallRequest.cpp  Server.cpp  main.cpp
